--- a/package.json
+++ b/package.json
@@ -3,18 +3,24 @@
 	"version": "1.0.0",
 	"main": "build/src/server.js",
 	"scripts": {
-		"build": "tsoa spec-and-routes && tsc --outDir build --experimentalDecorators",
+		"dev": "concurrently \"nodemon\" \"nodemon -x tsoa spec-and-routes\"",
+		"build": "tsoa spec-and-routes && tsc",
 		"start": "node build/src/server.js"
 	},
 	"author": "Siddharth <64648985+Sid-MB@users.noreply.github.com>",
 	"license": "MIT",
 	"dependencies": {
 		"express": "^4.19.2",
+		"swagger-ui-express": "^5.0.0",
 		"tsoa": "^6.2.1"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.21",
 		"@types/node": "^20.12.11",
+		"@types/swagger-ui-express": "^4.1.6",
+		"concurrently": "^8.2.2",
+		"nodemon": "^3.1.0",
+		"ts-node": "^10.9.2",
 		"typescript": "^5.4.5"
 	}
 }
